@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -42,31 +42,20 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
+import java.util.function.Consumer;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import org.graalvm.compiler.api.replacements.SnippetReflectionProvider;
-import org.graalvm.compiler.nodes.ConstantNode;
-import org.graalvm.compiler.nodes.ValueNode;
-import org.graalvm.compiler.nodes.graphbuilderconf.ClassInitializationPlugin;
-import org.graalvm.compiler.nodes.graphbuilderconf.GraphBuilderContext;
-import org.graalvm.compiler.nodes.graphbuilderconf.InvocationPlugin.Receiver;
-import org.graalvm.compiler.nodes.graphbuilderconf.InvocationPlugin.RequiredInlineOnlyInvocationPlugin;
-import org.graalvm.compiler.nodes.graphbuilderconf.InvocationPlugin.RequiredInvocationPlugin;
-import org.graalvm.compiler.nodes.graphbuilderconf.InvocationPlugins;
-import org.graalvm.compiler.nodes.graphbuilderconf.InvocationPlugins.Registration;
-import org.graalvm.compiler.options.Option;
 import org.graalvm.nativeimage.ImageSingletons;
 import org.graalvm.nativeimage.hosted.RuntimeReflection;
 import org.graalvm.nativeimage.impl.RuntimeClassInitializationSupport;
 
 import com.oracle.graal.pointsto.infrastructure.OriginalClassProvider;
 import com.oracle.graal.pointsto.meta.AnalysisUniverse;
-import com.oracle.graal.pointsto.util.GraalAccess;
+import com.oracle.svm.core.MissingRegistrationUtils;
 import com.oracle.svm.core.ParsingReason;
-import com.oracle.svm.core.SubstrateOptions;
 import com.oracle.svm.core.TypeResult;
 import com.oracle.svm.core.annotate.Delete;
 import com.oracle.svm.core.hub.PredefinedClassesSupport;
@@ -74,16 +63,30 @@ import com.oracle.svm.core.jdk.StackTraceUtils;
 import com.oracle.svm.core.option.HostedOptionKey;
 import com.oracle.svm.core.util.VMError;
 import com.oracle.svm.hosted.ExceptionSynthesizer;
+import com.oracle.svm.hosted.FallbackFeature;
 import com.oracle.svm.hosted.ImageClassLoader;
+import com.oracle.svm.hosted.ReachabilityRegistrationNode;
 import com.oracle.svm.hosted.classinitialization.ClassInitializationSupport;
 import com.oracle.svm.hosted.substitute.AnnotationSubstitutionProcessor;
 import com.oracle.svm.hosted.substitute.DeletedElementException;
 import com.oracle.svm.util.ModuleSupport;
 import com.oracle.svm.util.ReflectionUtil;
 
+import jdk.graal.compiler.debug.GraalError;
+import jdk.graal.compiler.nodes.ConstantNode;
+import jdk.graal.compiler.nodes.ValueNode;
+import jdk.graal.compiler.nodes.graphbuilderconf.ClassInitializationPlugin;
+import jdk.graal.compiler.nodes.graphbuilderconf.GraphBuilderContext;
+import jdk.graal.compiler.nodes.graphbuilderconf.InvocationPlugin.Receiver;
+import jdk.graal.compiler.nodes.graphbuilderconf.InvocationPlugin.RequiredInlineOnlyInvocationPlugin;
+import jdk.graal.compiler.nodes.graphbuilderconf.InvocationPlugin.RequiredInvocationPlugin;
+import jdk.graal.compiler.nodes.graphbuilderconf.InvocationPlugins;
+import jdk.graal.compiler.nodes.graphbuilderconf.InvocationPlugins.Registration;
+import jdk.graal.compiler.options.Option;
 import jdk.vm.ci.meta.JavaConstant;
 import jdk.vm.ci.meta.JavaKind;
 import jdk.vm.ci.meta.MetaAccessProvider;
+import jdk.vm.ci.meta.ResolvedJavaField;
 import jdk.vm.ci.meta.ResolvedJavaMethod;
 import jdk.vm.ci.meta.ResolvedJavaType;
 
@@ -92,7 +95,7 @@ import jdk.vm.ci.meta.ResolvedJavaType;
  * compile-time constants, e.g., for {@link Method}, {@link MethodHandle}, or {@code VarHandle}
  * instances. This avoids manual registration of these elements using a reflection configuration
  * file.
- * 
+ *
  * One important assumption made in this class is that the return types of all folded methods do not
  * have object identity, i.e., it is allowed to return a cached object instead of creating a new
  * object at every invocation. While the types {@link #ALLOWED_CONSTANT_CLASSES we allow} are not
@@ -100,9 +103,6 @@ import jdk.vm.ci.meta.ResolvedJavaType;
  * JDK so that any code that would rely on object identity is error-prone on any JVM.
  */
 public final class ReflectionPlugins {
-    public static class ReflectionPluginRegistry extends IntrinsificationPluginRegistry {
-    }
-
     static class Options {
         @Option(help = "Enable trace logging for reflection plugins.")//
         static final HostedOptionKey<Boolean> ReflectionPluginTracing = new HostedOptionKey<>(false);
@@ -114,61 +114,61 @@ public final class ReflectionPlugins {
     private static final Object NULL_MARKER = new Object();
 
     private final ImageClassLoader imageClassLoader;
-    private final SnippetReflectionProvider snippetReflection;
     private final AnnotationSubstitutionProcessor annotationSubstitutions;
     private final ClassInitializationPlugin classInitializationPlugin;
     private final AnalysisUniverse aUniverse;
     private final ParsingReason reason;
+    private final FallbackFeature fallbackFeature;
+    private final ClassInitializationSupport classInitializationSupport;
 
-    private ReflectionPlugins(ImageClassLoader imageClassLoader, SnippetReflectionProvider snippetReflection, AnnotationSubstitutionProcessor annotationSubstitutions,
-                    ClassInitializationPlugin classInitializationPlugin, AnalysisUniverse aUniverse, ParsingReason reason) {
+    private ReflectionPlugins(ImageClassLoader imageClassLoader, AnnotationSubstitutionProcessor annotationSubstitutions,
+                    ClassInitializationPlugin classInitializationPlugin, AnalysisUniverse aUniverse, ParsingReason reason, FallbackFeature fallbackFeature) {
         this.imageClassLoader = imageClassLoader;
-        this.snippetReflection = snippetReflection;
         this.annotationSubstitutions = annotationSubstitutions;
         this.classInitializationPlugin = classInitializationPlugin;
         this.aUniverse = aUniverse;
         this.reason = reason;
+        this.fallbackFeature = fallbackFeature;
+
+        this.classInitializationSupport = (ClassInitializationSupport) ImageSingletons.lookup(RuntimeClassInitializationSupport.class);
     }
 
-    public static void registerInvocationPlugins(ImageClassLoader imageClassLoader, SnippetReflectionProvider snippetReflection, AnnotationSubstitutionProcessor annotationSubstitutions,
-                    ClassInitializationPlugin classInitializationPlugin, InvocationPlugins plugins, AnalysisUniverse aUniverse, ParsingReason reason) {
-        /*
-         * Initialize the registry if we are during analysis. If hosted is false, i.e., we are
-         * analyzing the static initializers, then we always intrinsify, so don't need a registry.
-         */
-        if (reason == ParsingReason.PointsToAnalysis) {
-            if (!ImageSingletons.contains(ReflectionPluginRegistry.class)) {
-                ImageSingletons.add(ReflectionPluginRegistry.class, new ReflectionPluginRegistry());
-            }
-        }
-
-        ReflectionPlugins rp = new ReflectionPlugins(imageClassLoader, snippetReflection, annotationSubstitutions, classInitializationPlugin, aUniverse, reason);
+    public static void registerInvocationPlugins(ImageClassLoader imageClassLoader, AnnotationSubstitutionProcessor annotationSubstitutions,
+                    ClassInitializationPlugin classInitializationPlugin, InvocationPlugins plugins, AnalysisUniverse aUniverse, ParsingReason reason, FallbackFeature fallbackFeature) {
+        ReflectionPlugins rp = new ReflectionPlugins(imageClassLoader, annotationSubstitutions, classInitializationPlugin, aUniverse, reason, fallbackFeature);
         rp.registerMethodHandlesPlugins(plugins);
         rp.registerClassPlugins(plugins);
     }
+
+    private static final Class<?> VAR_FORM_CLASS = ReflectionUtil.lookupClass(false, "java.lang.invoke.VarForm");
+    private static final Class<?> MEMBER_NAME_CLASS = ReflectionUtil.lookupClass(false, "java.lang.invoke.MemberName");
 
     /**
      * Classes that are allowed to be constant folded for Object parameters. We must be careful and
      * return only objects of classes that are "immutable enough", i.e., cannot change their
      * meaning. Otherwise, the object could be modified between the intrinsification at image build
      * time and the actual method invocation at run time.
-     * 
+     *
      * Note that many of the classes are not completely immutable because they have lazily
      * initialized caches, or the "accessible" flag of reflection objects. That is OK, because these
      * mutable fields do not affect the outcome of any of the methods that we register for constant
      * folding.
-     * 
+     *
      * Adding an array type of a Java collection class to this list is always wrong, because those
      * are never immutable.
      */
-    private static final Set<Class<?>> ALLOWED_CONSTANT_CLASSES = new HashSet<>(Arrays.asList(
+    private static final Set<Class<?>> ALLOWED_CONSTANT_CLASSES = Set.of(
                     Class.class, String.class, ClassLoader.class,
                     Method.class, Constructor.class, Field.class,
                     MethodHandle.class, MethodHandles.Lookup.class, MethodType.class,
-                    VarHandle.class,
-                    ByteOrder.class));
+                    VarHandle.class, VAR_FORM_CLASS, MEMBER_NAME_CLASS,
+                    ByteOrder.class);
 
     private void registerMethodHandlesPlugins(InvocationPlugins plugins) {
+        for (Class<?> clazz : List.of(Boolean.class, Byte.class, Short.class, Character.class, Integer.class, Long.class, Float.class, Double.class)) {
+            registerFoldInvocationPlugins(plugins, clazz, "toString", "toBinaryString", "toOctalString", "toHexString");
+        }
+        registerFoldInvocationPlugins(plugins, String.class, "valueOf");
 
         registerFoldInvocationPlugins(plugins, MethodHandles.class,
                         "publicLookup", "privateLookupIn",
@@ -189,15 +189,50 @@ public final class ReflectionPlugins {
                         "changeReturnType", "erase", "generic", "wrap", "unwrap",
                         "parameterType", "parameterCount", "returnType", "lastParameterType");
 
+        registerFoldInvocationPlugins(plugins, MethodHandle.class, "asType");
+
+        registerFoldInvocationPlugins(plugins, VAR_FORM_CLASS, "resolveMemberName");
+
         registerConditionalFoldInvocationPlugins(plugins);
 
-        Registration r = new Registration(plugins, MethodHandles.class);
-        r.register(new RequiredInlineOnlyInvocationPlugin("lookup") {
+        Registration mh = new Registration(plugins, MethodHandles.class);
+        mh.register(new RequiredInlineOnlyInvocationPlugin("lookup") {
             @Override
             public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver) {
                 return processMethodHandlesLookup(b, targetMethod);
             }
         });
+
+        Registration dmh = new Registration(plugins, "java.lang.invoke.MemberName");
+        dmh.register(new RequiredInvocationPlugin("getDeclaringClass", Receiver.class) {
+            @Override
+            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver) {
+                JavaConstant constReceiver = receiver.get(false).asJavaConstant();
+                if (constReceiver == null || constReceiver.isNull()) {
+                    return false;
+                }
+                /*
+                 * The clazz field of MemberName qualifies as stable except when an object is cloned
+                 * and the new object's field is nulled. We should not observe it in that state.
+                 */
+                ResolvedJavaField clazzField = findField(targetMethod.getDeclaringClass(), "clazz");
+                JavaConstant clazz = b.getConstantReflection().readFieldValue(clazzField, constReceiver);
+                if (clazz == null || clazz.isNull()) {
+                    return false;
+                }
+                b.push(JavaKind.Object, ConstantNode.forConstant(clazz, b.getMetaAccess(), b.getGraph()));
+                return true;
+            }
+        });
+    }
+
+    private static ResolvedJavaField findField(ResolvedJavaType type, String name) {
+        for (ResolvedJavaField field : type.getInstanceFields(false)) {
+            if (field.getName().equals(name)) {
+                return field;
+            }
+        }
+        throw GraalError.shouldNotReachHere("Required field " + name + " not found in " + type); // ExcludeFromJacocoGeneratedReport
     }
 
     /**
@@ -212,9 +247,9 @@ public final class ReflectionPlugins {
             /* VarHandles.makeFieldHandle() triggers init of receiver class (JDK-8291065). */
             Object classArg = args[0];
             if (classArg instanceof Class<?>) {
-                if (shouldInitializeAtRuntime((Class<?>) classArg)) {
+                if (!classInitializationSupport.maybeInitializeAtBuildTime((Class<?>) classArg)) {
                     /* Skip the folding and register the field for run time reflection. */
-                    if (reason == ParsingReason.PointsToAnalysis) {
+                    if (reason.duringAnalysis()) {
                         Field field = ReflectionUtil.lookupField(true, (Class<?>) args[0], (String) args[1]);
                         if (field != null) {
                             RuntimeReflection.register(field);
@@ -235,9 +270,9 @@ public final class ReflectionPlugins {
             Object fieldArg = args[0];
             if (fieldArg instanceof Field) {
                 Field field = (Field) fieldArg;
-                if (isStatic(field) && shouldInitializeAtRuntime(field.getDeclaringClass())) {
+                if (isStatic(field) && !classInitializationSupport.maybeInitializeAtBuildTime(field.getDeclaringClass())) {
                     /* Skip the folding and register the field for run time reflection. */
-                    if (reason == ParsingReason.PointsToAnalysis) {
+                    if (reason.duringAnalysis()) {
                         RuntimeReflection.register(field);
                     }
                     return false;
@@ -251,6 +286,30 @@ public final class ReflectionPlugins {
         registerFoldInvocationPlugins(plugins, Class.class,
                         "getField", "getMethod", "getConstructor",
                         "getDeclaredField", "getDeclaredMethod", "getDeclaredConstructor");
+
+        /*
+         * The class sun.nio.ch.Reflect contains various reflection lookup methods that then pass
+         * parameters through to the actual methods in java.lang.Class. But they do additional
+         * things like calling setAccessible(true), so method inlining before analysis cannot
+         * constant-fold them automatically. So we register them manually here for folding too.
+         */
+        registerFoldInvocationPlugins(plugins, ReflectionUtil.lookupClass(false, "sun.nio.ch.Reflect"),
+                        "lookupConstructor", "lookupMethod", "lookupField");
+
+        if (MissingRegistrationUtils.throwMissingRegistrationErrors() && reason.duringAnalysis() && reason != ParsingReason.JITCompilation) {
+            registerBulkInvocationPlugin(plugins, Class.class, "getClasses", RuntimeReflection::registerAllClasses);
+            registerBulkInvocationPlugin(plugins, Class.class, "getDeclaredClasses", RuntimeReflection::registerAllDeclaredClasses);
+            registerBulkInvocationPlugin(plugins, Class.class, "getConstructors", RuntimeReflection::registerAllConstructors);
+            registerBulkInvocationPlugin(plugins, Class.class, "getDeclaredConstructors", RuntimeReflection::registerAllDeclaredConstructors);
+            registerBulkInvocationPlugin(plugins, Class.class, "getFields", RuntimeReflection::registerAllFields);
+            registerBulkInvocationPlugin(plugins, Class.class, "getDeclaredFields", RuntimeReflection::registerAllDeclaredFields);
+            registerBulkInvocationPlugin(plugins, Class.class, "getMethods", RuntimeReflection::registerAllMethods);
+            registerBulkInvocationPlugin(plugins, Class.class, "getDeclaredMethods", RuntimeReflection::registerAllDeclaredMethods);
+            registerBulkInvocationPlugin(plugins, Class.class, "getNestMembers", RuntimeReflection::registerAllNestMembers);
+            registerBulkInvocationPlugin(plugins, Class.class, "getPermittedSubclasses", RuntimeReflection::registerAllPermittedSubclasses);
+            registerBulkInvocationPlugin(plugins, Class.class, "getRecordComponents", RuntimeReflection::registerAllRecordComponents);
+            registerBulkInvocationPlugin(plugins, Class.class, "getSigners", RuntimeReflection::registerAllSigners);
+        }
 
         Registration r = new Registration(plugins, Class.class);
         r.register(new RequiredInvocationPlugin("forName", String.class) {
@@ -299,7 +358,7 @@ public final class ReflectionPlugins {
              */
             return false;
         }
-        Class<?> callerClass = OriginalClassProvider.getJavaClass(snippetReflection, b.getMethod().getDeclaringClass());
+        Class<?> callerClass = OriginalClassProvider.getJavaClass(b.getMethod().getDeclaringClass());
         MethodHandles.Lookup lookup;
         try {
             /* The constructor of Lookup is not public, so we need to invoke it via reflection. */
@@ -342,7 +401,7 @@ public final class ReflectionPlugins {
         }
 
         if (initialize) {
-            classInitializationPlugin.apply(b, b.getMetaAccess().lookupJavaType(clazz), () -> null, null);
+            classInitializationPlugin.apply(b, b.getMetaAccess().lookupJavaType(clazz), () -> null);
         }
         return true;
     }
@@ -362,7 +421,23 @@ public final class ReflectionPlugins {
         if (PredefinedClassesSupport.isPredefined(clazz)) {
             return false;
         }
-        return pushConstant(b, targetMethod, clazz::getName, JavaKind.Object, clazz.getClassLoader(), true) != null;
+
+        // GR-57649 generalize code if needed in more places
+        ClassLoader loader = clazz.getClassLoader();
+        JavaConstant result;
+        if (loader == null) {
+            result = JavaConstant.NULL_POINTER;
+        } else {
+            result = getIntrinsicConstant(b, loader);
+        }
+
+        if (result != null) {
+            b.addPush(JavaKind.Object, ConstantNode.forConstant(result, b.getMetaAccess()));
+            traceConstant(b, targetMethod, clazz::getName, result);
+            return true;
+        }
+
+        return false;
     }
 
     /**
@@ -387,7 +462,7 @@ public final class ReflectionPlugins {
     }
 
     private void registerFoldInvocationPlugin(InvocationPlugins plugins, Method reflectionMethod, Predicate<Object[]> allowConstantFolding) {
-        if (!ALLOWED_CONSTANT_CLASSES.contains(reflectionMethod.getReturnType()) && !reflectionMethod.getReturnType().isPrimitive()) {
+        if (!isAllowedReturnType(reflectionMethod.getReturnType())) {
             throw VMError.shouldNotReachHere("Return type of method " + reflectionMethod + " is not on the allow-list for types that are immutable");
         }
         reflectionMethod.setAccessible(true);
@@ -404,6 +479,10 @@ public final class ReflectionPlugins {
                 return foldInvocationUsingReflection(b, targetMethod, reflectionMethod, receiver, args, allowConstantFolding);
             }
         });
+    }
+
+    private static boolean isAllowedReturnType(Class<?> returnType) {
+        return ALLOWED_CONSTANT_CLASSES.contains(returnType) || returnType.isPrimitive();
     }
 
     private boolean foldInvocationUsingReflection(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Method reflectionMethod, Receiver receiver, ValueNode[] args,
@@ -466,9 +545,46 @@ public final class ReflectionPlugins {
         return pushConstant(b, targetMethod, targetParameters, returnKind, returnValue, false) != null;
     }
 
-    private static boolean shouldInitializeAtRuntime(Class<?> classArg) {
-        ClassInitializationSupport classInitializationSupport = (ClassInitializationSupport) ImageSingletons.lookup(RuntimeClassInitializationSupport.class);
-        return classInitializationSupport.shouldInitializeAtRuntime(classArg);
+    private <T> void registerBulkInvocationPlugin(InvocationPlugins plugins, Class<T> declaringClass, String methodName, Consumer<T> registrationCallback) {
+        plugins.register(declaringClass, new RequiredInvocationPlugin(methodName, new Class<?>[]{Receiver.class}) {
+            @Override
+            public boolean isDecorator() {
+                return true;
+            }
+
+            @Override
+            public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver) {
+                VMError.guarantee(!targetMethod.isStatic(), "Bulk reflection queries are not static");
+                return registerConstantBulkReflectionQuery(b, receiver, registrationCallback);
+            }
+        });
+    }
+
+    @SuppressWarnings("unchecked")
+    private <T> boolean registerConstantBulkReflectionQuery(GraphBuilderContext b, Receiver receiver, Consumer<T> registrationCallback) {
+        /*
+         * Calling receiver.get(true) can add a null check guard, i.e., modifying the graph in the
+         * process. It is an error for invocation plugins that do not replace the call to modify the
+         * graph.
+         */
+        Object receiverValue = unbox(b, receiver.get(false), JavaKind.Object);
+        if (receiverValue == null || receiverValue == NULL_MARKER) {
+            return false;
+        }
+
+        b.add(ReachabilityRegistrationNode.create(() -> registerForRuntimeReflection((T) receiverValue, registrationCallback), reason));
+        return true;
+    }
+
+    private <T> void registerForRuntimeReflection(T receiver, Consumer<T> registrationCallback) {
+        try {
+            registrationCallback.accept(receiver);
+            if (fallbackFeature != null) {
+                fallbackFeature.ignoreReflectionFallback = true;
+            }
+        } catch (LinkageError e) {
+            // Ignore, the call should be registered manually
+        }
     }
 
     private static boolean isStatic(Field field) {
@@ -481,7 +597,7 @@ public final class ReflectionPlugins {
              * If the argument is not a constant, we try to extract a varargs-parameter list for
              * Class[] arrays. This is used in many reflective lookup methods.
              */
-            return SubstrateGraphBuilderPlugins.extractClassArray(annotationSubstitutions, snippetReflection, arg, true);
+            return SubstrateGraphBuilderPlugins.extractClassArray(b, annotationSubstitutions, arg, true);
         }
 
         JavaConstant argConstant = arg.asJavaConstant();
@@ -508,11 +624,11 @@ public final class ReflectionPlugins {
             case Object:
                 return unboxObjectConstant(b, argConstant);
             default:
-                throw VMError.shouldNotReachHere();
+                throw VMError.shouldNotReachHereUnexpectedInput(argKind); // ExcludeFromJacocoGeneratedReport
         }
     }
 
-    private Object unboxObjectConstant(GraphBuilderContext b, JavaConstant argConstant) {
+    private static Object unboxObjectConstant(GraphBuilderContext b, JavaConstant argConstant) {
         ResolvedJavaType javaType = b.getConstantReflection().asJavaType(argConstant);
         if (javaType != null) {
             /*
@@ -521,18 +637,25 @@ public final class ReflectionPlugins {
              * reflective call will yield the original member, which will be intrinsified, and
              * subsequent phases are responsible for getting the right substitution.
              */
-            return OriginalClassProvider.getJavaClass(GraalAccess.getOriginalSnippetReflection(), javaType);
+            return OriginalClassProvider.getJavaClass(javaType);
         }
 
         /* Any other object that is not a Class. */
-        Object result = snippetReflection.asObject(Object.class, argConstant);
-        if (ALLOWED_CONSTANT_CLASSES.contains(result.getClass())) {
+        Object result = b.getSnippetReflection().asObject(Object.class, argConstant);
+        if (result != null && isAllowedConstant(result.getClass())) {
             return result;
         }
         return null;
     }
 
-    private final boolean parseOnce = SubstrateOptions.parseOnce();
+    private static boolean isAllowedConstant(Class<?> clazz) {
+        for (var allowed : ALLOWED_CONSTANT_CLASSES) {
+            if (allowed.isAssignableFrom(clazz)) {
+                return true;
+            }
+        }
+        return false;
+    }
 
     /**
      * This method checks if the element should be intrinsified and returns the cached intrinsic
@@ -546,36 +669,38 @@ public final class ReflectionPlugins {
      */
     @SuppressWarnings("unchecked")
     private <T> T getIntrinsic(GraphBuilderContext context, T element) {
-        if (reason == ParsingReason.UnsafeSubstitutionAnalysis || reason == ParsingReason.EarlyClassInitializerAnalysis) {
+        if (reason == ParsingReason.AutomaticUnsafeTransformation || reason == ParsingReason.EarlyClassInitializerAnalysis) {
             /* We are analyzing the static initializers and should always intrinsify. */
             return element;
         }
-        /* We don't intrinsify if bci is not unique. */
-        if (context.bciCanBeDuplicated()) {
+        if (isDeleted(element, context.getMetaAccess())) {
+            /*
+             * Should not intrinsify. Will fail during the reflective lookup at runtime. @Delete-ed
+             * elements are ignored by the reflection plugins regardless of the value of
+             * ReportUnsupportedElementsAtRuntime.
+             */
             return null;
         }
-        if (parseOnce || reason == ParsingReason.PointsToAnalysis) {
-            if (isDeleted(element, context.getMetaAccess())) {
-                /*
-                 * Should not intrinsify. Will fail during the reflective lookup at
-                 * runtime. @Delete-ed elements are ignored by the reflection plugins regardless of
-                 * the value of ReportUnsupportedElementsAtRuntime.
-                 */
-                return null;
-            }
+        return (T) aUniverse.replaceObject(element);
+    }
 
-            Object replaced = aUniverse.replaceObject(element);
-
-            if (parseOnce) {
-                /* No separate parsing for compilation, so no need to cache the result. */
-                return (T) replaced;
-            }
-
-            /* During parsing for analysis we intrinsify and cache the result for compilation. */
-            ImageSingletons.lookup(ReflectionPluginRegistry.class).add(context.getMethod(), context.bci(), replaced);
+    /**
+     * Same as {@link #getIntrinsic}, but returns a {@link JavaConstant}.
+     */
+    private JavaConstant getIntrinsicConstant(GraphBuilderContext context, Object element) {
+        if (reason == ParsingReason.AutomaticUnsafeTransformation || reason == ParsingReason.EarlyClassInitializerAnalysis) {
+            /* We are analyzing the static initializers and should always intrinsify. */
+            return context.getSnippetReflection().forObject(element);
         }
-        /* During parsing for compilation we only intrinsify if intrinsified during analysis. */
-        return ImageSingletons.lookup(ReflectionPluginRegistry.class).get(context.getMethod(), context.bci());
+        if (isDeleted(element, context.getMetaAccess())) {
+            /*
+             * Should not intrinsify. Will fail during the reflective lookup at runtime. @Delete-ed
+             * elements are ignored by the reflection plugins regardless of the value of
+             * ReportUnsupportedElementsAtRuntime.
+             */
+            return null;
+        }
+        return aUniverse.replaceObjectWithConstant(element, context.getSnippetReflection()::forObject);
     }
 
     private static <T> boolean isDeleted(T element, MetaAccessProvider metaAccess) {
@@ -613,7 +738,7 @@ public final class ReflectionPlugins {
         } else if (intrinsicValue == NULL_MARKER) {
             intrinsicConstant = JavaConstant.NULL_POINTER;
         } else {
-            intrinsicConstant = snippetReflection.forObject(intrinsicValue);
+            intrinsicConstant = b.getSnippetReflection().forObject(intrinsicValue);
         }
 
         b.addPush(returnKind, ConstantNode.forConstant(intrinsicConstant, b.getMetaAccess()));
